--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-scripts": "^2.1.1",
     "react-transition-group": "^2.5.0",
     "redux-actions": "^2.6.4",
-    "redux-saga": "^0.16.2",
+    "redux-saga": "^1.0.0-beta.3",
     "reselect": "^4.0.0"
   },
   "scripts": {
